code/wp-content/themes/quebecnumerique/style.less
/* ... */
	@media screen and (max-width: 767px){
		.contact-form { width: 98.14%; }
		.accueil .c6 {width: 99.99%; }
		.trois .c6, .img-box .c6 { width: 49.98%; }
		.nbr-count, .stats { display: none; }
		.slick-slide { height: 5em; }
		.accueil { margin-top: 25%; }
		.header-post-type h1 { font-size: 2em; }
		#colophon .gris-bg .c6 { 
			text-align: center; 
			margin-top: 0.5em; margin-bottom: 0.5em;
			width: 100%;
			.rs { text-align: center; a { padding: 0 0.4em; } }
		}
		.slick-slide span.no-img { font-size: 2em; max-width: 10em; }
		.search-results  {
			.page-header .c6 { width: 100%; margin-bottom: 1em; }
			.resultats { font-size: 75%; }
		}

		.single #content > article > .large-wrapper .sharing > div { font-size: 75%; padding-top: 1em; }
		#map-content { margin-top: 3em;}
		.abstract {top: 8%;}  
		.nouvelles .padding{
			padding: 0;
		}
	}

	@media screen and (max-width: 600px){

		.cinq, .alm-listing {
			.c3,
			.group .c3,
			.group:nth-child(odd) .c3,
			.group:nth-child(even) .c3,
			.group:nth-child(even) .c3:nth-child(3),
			.group:nth-child(even) .c3:last-child,
			.group:nth-child(odd) .c3:first-child { 
				width: 99.99%;
			}
		}

		.navigation .principal#menu-principal { font-size: 75%; padding-top: 9em; }

		#colophon form .gform_body ul li:first-child,
		#colophon form .gform_body ul li {
			margin: 0 0 0.5em 0;
			float: none;
			width: 100%;
		}

		.all-projets .c9 {
			float: none;
			width: auto;
			margin: 0 auto;
			.list-secteurs { clear: both; }
		}

		.group.related-posts .c3 { width: 100%; }

		.coordonees a { font-size: 1.3em;}

		.ajax-load-more-wrap.white button.alm-load-more-btn{ font-size: 0.9em; }
	}

	@media screen and (max-width: 500px){
		.trois, .img-box { .c6 {width: 99.99%;} }	
		.home-link { font-size: 80%; }
		.navigation .meta { margin-left: 10em; }
		.site-description { left: 10em; }
		.navigation .principal#menu-principal { font-size: 65%; }
		.img-box .content { font-size: 120%; }
		.equipe .c3{width: 99.99%;}
	}

	@media screen and (max-width: 479px){
		.home-link { font-size: 65%; }
		.navigation .meta { margin-left: 8em; }
		.site-description { left: 8em; }
	}
/* ... */

